--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h1 {
   position: relative;
 }
 .circle {
-  content: '';
+  content: "";
   width: 10px;
   height: 87%;
   background: hsl(243, 100%, 93%);
@@ -107,17 +107,46 @@ h1 {
   right: 2px;
 }
 
+/* Progress Bar Absolutes */
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Thought Bubble */
 .bubble {
-  height: 75px;
-  width: 150px;
-  background: hsl(243, 100%, 93%);
+  height: 60px;
+  width: 175px;
+  background: #fff;
   color: black;
-  border-radius: 15px;
+  border-radius: 10px;
   text-align: center;
   position: absolute;
   top: -15px;
   right: 15px;
+}
+/* Bottom Right Arrow */
+.bubble::before {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 20px 20px 20px 0;
+  border-color: #fff #fff transparent transparent;
+}
+.bubble p {
+  color: #aaa;
+  font-weight: 700;
+  padding-top: 10px;
+  text-transform: uppercase;
+}
+.bubble p strong {
+  color: #000;
+  font-size: 2rem;
+  padding-right: 0.5rem;
 }
 
 /* Footer */
