--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   font-size: 14px;
   font-family: "Raleway", sans-serif;
   background: hsl(229, 57%, 11%);
+  background-image: url(img/bg-desktop.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  height: 100vh;
   color: hsl(243, 100%, 93%);
 }
 
@@ -15,21 +19,15 @@ h1 {
   font-weight: 400;
 }
 
-/* Image background */
-.background {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-}
-
 /* Page Contents */
 .container {
   display: flex;
-  height: 100vh;
   align-items: center;
   justify-content: center;
+  padding-top: 325px;
   z-index: 1;
+  position: relative;
+  top: 5.25rem;
 }
 
 /* Style for both containers */
@@ -63,14 +61,15 @@ h1 {
 
 /* Right Container */
 .right {
-  height: 200px;
+  height: 150px;
   width: 600px;
   padding: 2rem;
   border-radius: 5px;
   position: relative;
+  top: 25px;
 }
 .right-container {
-  position: absolute;
+  right: 100px;
   bottom: 40px;
   width: 85%;
 }
@@ -122,7 +121,7 @@ h1 {
   border-radius: 10px;
   text-align: center;
   position: absolute;
-  top: -15px;
+  top: -40px;
   right: 15px;
 }
 /* Bottom Right Arrow */
@@ -150,9 +149,13 @@ h1 {
 }
 
 /* Footer */
+footer {
+  padding-top: 325px;
+}
 .attribution {
   font-size: 11px;
   text-align: center;
+  padding-top: 3rem;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
